--- a/static/style.scss
+++ b/static/style.scss
@@ -1,4 +1,6 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap');
+
 $mapsize: fit-content;
 $cell: 30px;
 
@@ -7,6 +9,50 @@ $cell: 30px;
     line-height: $cell;
     width: $cell;
     text-align: center;
+}
+
+.main {
+    font-family: 'Lato';
+    margin: auto;
+    width: fit-content;
+    height: fit-content;
+}
+
+.c_panel {
+    form {
+        div {
+            padding: 0px;
+            width: 300px;
+            label {
+                width: 30%;
+            }
+            input, select {
+                margin: 8px 0;
+                padding: 8px;
+                display: block;
+                border: none;
+                border-bottom: 1px solid #ccc;
+                width: 100%;
+                box-sizing: border-box;
+            }
+            select {
+                width: 100%;
+                display: block;
+            }
+        }
+        button {
+            background-color: darkcyan; /* Green */
+            border: none;
+            color: white;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            border-radius: 3px;
+            margin: 15px 0;
+        }
+    }
 }
 
 .c_map {
@@ -29,6 +75,7 @@ $cell: 30px;
             margin: 0;
             border: 1px solid #aaaaaa;
             overflow: hidden;
+            box-sizing: border-box;
         }
         .x_cell {
             &:before {
