--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap");
-.flag, .c_board .row .x_cell:before, .c_board .row .o_cell:before {
+.flag, .c_map .row .x_cell:before, .c_map .row .o_cell:before {
   display: block;
   line-height: 30px;
   width: 30px;
@@ -56,7 +56,7 @@
   margin: 15px 0;
 }
 
-.c_board {
+.c_map {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
@@ -67,7 +67,7 @@
   background-color: gray;
 }
 
-.c_board .row {
+.c_map .row {
   margin: 0;
   padding: 0;
   display: block;
@@ -77,7 +77,7 @@
   height: 30px;
 }
 
-.c_board .row .cell {
+.c_map .row .cell {
   background-color: white;
   padding: 0;
   width: 30px;
@@ -90,7 +90,7 @@
           box-sizing: border-box;
 }
 
-.c_board .row .x_cell:before {
+.c_map .row .x_cell:before {
   content: '\26CC';
   font-size: 2rem;
   color: blue;
@@ -98,12 +98,12 @@
           transform: translateY(-2px);
 }
 
-.c_board .row .o_cell:before {
+.c_map .row .o_cell:before {
   content: '\2B55';
   color: blue;
 }
 
-.c_board .row .active {
+.c_map .row .active {
   background-color: yellow !important;
 }
 /*# sourceMappingURL=style.css.map */
